cmake_minimum_required(VERSION 2.8)
project(test04)
aux_source_directory(. DIR_SRCS)
add_subdirectory(singleton)
add_executable(test04 main.cpp)
target_link_libraries(test04 Singleton)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
